--- a/app/views/welcome/index.html
+++ b/app/views/welcome/index.html
@@ -77,7 +77,10 @@
          <div class="thumbnail">
             <img src="http://placehold.it/800x500" alt="">
           <h2><%=link_to (truncate(project.title, length: 10, separator: ' ')), project_path(project)%></h2>
-          <p><%=truncate(project.des, length: 10, separator: ' ')%></p>
+          <p><%=truncate(project.des, length: 2, separator: ' ')%></p>
+          <%if project.des==""%>
+              <p><%="hello"%></p>
+          <%end%>  
           <p><a class="btn btn-default" href="/projects/<%=project.id%>" role="button">View details &raquo;</a></p>
         </div>
         </div>
