--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
                     <div class="col-md-4">
                         <div class="card">
                             <div class="image">
-                                <img src="assets/img/orion_iii_spaceplane_ortho_by_unusualsuspex-d6yto17.jpg" alt="..." />
+                                <img src="/images/pbg.jpg" alt="..." />
                                 <div class="filter">
                                     <button type="button" class="btn btn-neutral btn-simple">
                                         <i class="fa fa-bookmark-o"></i> Bookmark
