--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,11 +29,11 @@
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li role="presentation"><a href="#">Discover </a></li>
-                    <li role="presentation"><a href="#">Create </a></li>
+                    <li role="presentation"><a href="#"style="margin-top: 10px;">Discover </a></li>
+                    <li role="presentation"><a href="#" style="margin-top:10px;">Create </a></li>
                 </ul>
                 <ul class="nav navbar-nav drop-nav" id="dp-nav">
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Profile <span class="caret"></span></a>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#"style="margin-top:10px;">Profile <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Edit Profile </a></li>
                             <li><a href="#">Inbox </a></li>
@@ -42,45 +42,7 @@
                         </ul>
                     </li>
                 </ul>
-                <div class="col-md-3 dropdown">
-                      <a href="#" class="btn btn-simple dropdown-toggle" data-toggle="dropdown">
-                        Profile
-                        <b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu dropdown-with-icons">
-                        <li>
-                            <a href="#">
-                                <i class="pe-7s-user"></i> Account
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pe-7s-mail"></i> Messages
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pe-7s-portfolio"></i> Business Area
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pe-7s-light"></i> Smart Area
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="pe-7s-tools"></i> Settings
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-danger">
-                                <i class="pe-7s-close-circle"></i>
-                                Log out
-                            </a>
-                        </li>
-                      </ul>
-                </div>
+             
             </div>
         </div>
     </nav>
