--- a/app/assets/stylesheets/project.css
+++ b/app/assets/stylesheets/project.css
@@ -7277,7 +7277,7 @@ margin-right: 7px;
 }
 .name-container{
   margin-left:160px;
-  margin-right:;
+  margin-right:0px;
   margin-top:-60px;
   width:175px;
   position:absolute; 
