--- a/app/assets/stylesheets/project.css
+++ b/app/assets/stylesheets/project.css
@@ -7290,7 +7290,7 @@ margin-right: 7px;
   margin-bottom:10px;
   font-family:inherit;
   font-weight:500;
-  line-height: 1.1:;
+  line-height: 1.1;
   color:inherit;
 }
 .skills-container{
