--- a/app/assets/stylesheets/project.css
+++ b/app/assets/stylesheets/project.css
@@ -7294,7 +7294,7 @@ margin-right: 7px;
   color:inherit;
 }
 .skills-container{
-  padding-right:;
+  padding-right:0px;
   padding-left: 15px;
   margin-top:15px;
   width:300px;
