--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -79,18 +79,15 @@
                             </div>
                             <div class="form-group">
                                 <label for="email">Short Description</label>
-                                <input type="email" name="email" class="form-control" id="email" placeholder="Simple one-liner"/>
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">Phone</label>
-                                <input type="text" name="phone" class="form-control" id="phone" placeholder="Phone number"/>
+                                <%= f.text_field :subtitle, :class=>"form-control", :id=>"name", :placeholder=>"Simple One Liner"%>
                             </div>
                             <div class="form-group">
                                 <label for="message">Larger Description</label>
-                                <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                                <%= f.text_area :des, :class=>"form-control", :id=>"textarea" %>
                             </div>
                             <div class="submit">
-                                <input type="submit" class="btn btn-info btn-fill" value="Create" />
+                              <%= f.button :submit, :class=>" btn btn-info btn-fill", :value=>"Create" %>
+                               
                             </div>
                         </form>
                         <%end%>
