--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -137,7 +137,9 @@
                         <div class="media">
                               <a class="pull-left" href="#">
                                <div class="avatar">
-                                    <img class="media-object" src="assets/img/exprofile.png" alt="...">
+                                    <% if @project.user.present? %>
+                            <%=image_tag @project.try(:user).try(:avatar).url(:thumb)%>
+                          <% end %>
                                </div>
                               </a>
                               <div class="media-body">
