--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -134,8 +134,8 @@
           <div class="row">
           <div class="col-md-4">
           <div class="thumbnail">
-            <img src="http://placehold.it/800x500" alt="">
-          <h2><%=link_to (project.title), project_path(project)%></h2>
+            <img src="/images/pbg.jpg" alt="..." />
+          <h2 class="lessm"><%=link_to (project.title), project_path(project)%></h2>
           <p><%=project.des%></p>
 
           <p><a class="btn btn-default" href="#" role="button">Explore &raquo;</a></p>
