--- a/public/stylesheets/gsdk.css
+++ b/public/stylesheets/gsdk.css
@@ -215,6 +215,9 @@ h1 .subtitle {
 .text-danger:hover {
   color: #ff3b30 !important;
 }
+.lessm{
+  margin: 10px;
+}
 /*     General overwrite     */
 body {
   font-family: "Helvetica Neue", "Open Sans", Arial, sans-serif;
