--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -18,6 +18,9 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"> 
     <link href='https://fonts.googleapis.com/css?family=Grand+Hotel|Open+Sans:400,300' rel='stylesheet' type='text/css'>  
     <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />  
+    <link href="/stylesheets/gsdk.css" rel="stylesheet" /> 
+     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />  
+
 </head>
 
 <body>
@@ -51,7 +54,6 @@
         
         <h5 class="text-center text-muted hero-title">"The dream of yesterday is the hope of today and the reality of tomorrow." </h5>
         <h6 class="text-center text-muted hero-title">- <strong>Robert Goddard</strong> </h6>
-        <p><a class="btn btn-success hero-button" role="button" href="">Get Started</a></p>
     </div>
     <div class="container">
         <form class="bootstrap-form-with-validation">
