--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -87,6 +87,10 @@
                                 <label for="message">Larger Description</label>
                                 <%= f.text_area :des, :class=>"form-control", :id=>"textarea" %>
                             </div>
+                            <div class="field">
+                                <%= f.label :avatar %>
+                                <%= f.file_field :avatar %>
+                            </div>
                             <div class="submit">
                               <%= f.button :submit, :class=>" btn btn-info btn-fill", :value=>"Create" %>
                                
