--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -60,6 +60,7 @@
            <div class="container">
                <div class="row">
                   <div class="col-md-8 bottom-border">
+                    <%= image_tag @friend.avatar.url(:square) %>
                     <h1 class="title title-blog"><%=@project.try(:title)%>: <%=@project.try(:subtitle)%></h1> 
                     <p><%=@project.try(:des)%></p>
 
