--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -60,7 +60,7 @@
            <div class="container">
                <div class="row">
                   <div class="col-md-8 bottom-border">
-                    <%= image_tag @project.avatar.url(:square) %>
+                    <%= image_tag @project.avatar.url(:medium) %>
                     <h1 class="title title-blog"><%=@project.try(:title)%>: <%=@project.try(:subtitle)%></h1> 
                     <p><%=@project.try(:des)%></p>
 
