--- a/app/assets/stylesheets/applicadtion.css
+++ b/app/assets/stylesheets/applicadtion.css
@@ -17,6 +17,12 @@ body {
   margin: 0;
   padding-top: 70px;
 }
+.messages {
+  max-height: 400px;
+  overflow-y: auto;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
 article,
 aside,
 details,
