--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,8 +37,9 @@
                 <ul class="nav navbar-nav drop-nav" id="dp-nav">
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">Profile<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Edit Profile </a></li>
-                            <li><a href="#">Inbox </a></li>
+                            <li><%=link_to 'My Profile', current_user%> 
+                            <li><%=link_to'Edit Profile', edit_user_registration_path%></li>
+                            <li><%=link_to 'Inbox', conversations_path%></li>
                             <li class="divider"></li>
                             <li><%= link_to 'Sign out!', destroy_user_session_path %>                        </ul>
                     </li>
