--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <% end %>
   <% if controller_name!="static"%> 
  	 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
- 	 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+ 	 <%= javascript_include_tag 'application' %>
  	 <%= csrf_meta_tags %>
 <%end%>
   <% if controller_name == "static" && action_name == "index" %>
