--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -2,5 +2,5 @@
   = f.input :subject
   = f.input :body
   .form-actions
-    = f.button :submit, class: 'btn-primary'
+    = f.button :submit, class: 'btn'
     = submit_tag 'Cancel', type: :reset, class: 'btn btn-danger'
