--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -54,7 +54,7 @@ true%>
         <h1 class="hero-title">Welcome to Extrara</h1>
         <p class="hero-subtitle">Our mission is to change the way the space industry leverages human interconnectivity</p>
         <div class ="buttonstuff">
-            <a class="btn btn-primary btn-lg hero-button hero-subtitle" role="button" href="/projects/new">Create Project</a>
+            <%=link_to('Create Project', new_project_path,  class: "btn btn-primary btn-lg hero-button hero-subtitle", "data-no-turbolink" => true)%>
 
         </div>
     </div>
@@ -85,7 +85,7 @@ true%>
                                 </div>
                             </div>
                             <div class="content">
-                                <p class="category"><%=link_to (truncate(project.title, length: 20, separator: ' ')), project_path(project)%></p>
+                                <p class="category"><%=link_to (truncate(project.title, length: 20, separator: ' ')), project_path(project),"data-no-turbolink" => true%></p>
                                 <a class="card-link" href="#">
                                     <h4 class="title"><%=truncate(project.des, length: 20, separator: ' ')%></h4>
                                      <%if project.des==""%>
@@ -96,7 +96,7 @@ true%>
                                     <div class="author">
                                         <a class="card-link" href="#">
                                            <%= image_tag project.try(:user).try(:avatar).try(:url, :small),:class => "avatar" %>
-                                           <span><%= project.try(:user).try(:fullname) %></span>
+                                           <span><%= link_to(project.try(:user).try(:fullname),user_path(project.try(:user).try(:id)),"data-no-turbolink" => true) %></span>
                                         </a>
                                     </div>
                                     <div class="stats pull-right">
@@ -123,7 +123,7 @@ true%>
                 <hr>
                 <nav class="pull-left">
                     <div class="copyright">
-                    &copy; 2014 Extrara Inc
+                    &copy; 2016 Extrara Inc
                 </div>
                     
                 </nav>
