--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -1,4 +1,4 @@
-html {background: #D3D3D3 url(img/mars.jpg) no-repeat center center fixed; 
+html {background: url(img/mars.jpg) no-repeat center center fixed; 
 		  -webkit-background-size: cover;
 		  -moz-background-size: cover;
 		  -o-background-size: cover;
