--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4,6 +4,20 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+.hero-title {
+    text-align: center;
+}
+.hero-subtitle {
+    text-align: center;
+}
+.hero-button{
+    text-align: center;
+}
+.logo {
+    width: 150px;
+    margin-top: 27px;
+    margin-right: 15px;
+}
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
