--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -4,59 +4,14 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
-    width: 100%;
-    height: 100%;
-    font-weight: 100;
-  font-family: Source Sans Pro, sans-serif, Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;;
-    color: #fff;
-    background-color: #000;
+.logo {
+    width: 150px;
+    margin-top: 27px;
+    margin-right: 15px;
 }
 
-html {
-    width: 100%;
-    height: 100%;
-}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
 
-p {
-    margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-@media(min-width:768px) {
-    p {
-        margin: 0 0 35px;
-        font-size: 20px;
-        line-height: 1.6;
-    }
-}
-
-a {
-    color: #42dca3;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-a:hover,
-a:focus {
-    text-decoration: none;
-    color: #1d9b6c;
-}
 
 .light {
     font-weight: 400;
@@ -299,7 +254,6 @@ a:focus {
 
 .btn {
     border-radius: 5;
-    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
@@ -307,19 +261,7 @@ a:focus {
     transition: all .3s ease-in-out;
 }
 
-.btn-default {
-    border: 1px solid #fff;
-    color: #fff;
-    background-color: transparent;
-}
 
-.btn-default:hover,
-.btn-default:focus {
-    border: 1px solid #fff;
-    outline: 0;
-    color: #000;
-    background-color: #fff;
-}
 
 ul.banner-social-buttons {
     margin-top: 0;
