--- a/app/assets/stylesheets/project.css
+++ b/app/assets/stylesheets/project.css
@@ -1610,8 +1610,8 @@ pre code {
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
-  min-height: 500px;
-  max-height: 500px;
+  min-height: 400px;
+  max-height: 400px;
   padding-right: 15px;
   padding-left: 15px;
   
@@ -6640,7 +6640,7 @@ p.form-title
 
 form
 {
-    width: 250px;
+   
     margin: 0 auto;
 }
 
@@ -7273,7 +7273,7 @@ margin-right: 7px;
 
 .prof-photo img{
   border-radius:6px;
-  
+  max-width: 180px;
 }
 .name-container{
   margin-left:160px;
@@ -7297,7 +7297,7 @@ margin-right: 7px;
   padding-right:0px;
   padding-left: 15px;
   margin-top:15px;
-  width:300px;
+
 
 }
 .project-help{
