--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,31 +23,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" >
-        <div class="container" style="min-height:70px">
-            <div class="navbar-header">
-                <%=link_to image_tag("https://s3-us-west-1.amazonaws.com/extrara-images/images/logo/Extrarablk2.png", :class=>"logo"), root_path%>
-                <div class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></div>
-            </div>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav">
-                    <li role="presentation"><a href="#"style="margin-top: 10px;">Discover </a></li>
-                    <li role="presentation"><a href="#" style="margin-top:10px;">Create </a></li>
-                </ul>
-                <ul class="nav navbar-nav drop-nav" id="dp-nav">
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#"style="margin-top:10px;">Profile <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Edit Profile </a></li>
-                            <li><a href="#">Inbox </a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Sign Out</a></li>
-                        </ul>
-                    </li>
-                </ul>
-             
-            </div>
-        </div>
-    </nav>
+   <%=render 'welcome/header'%>
 
 <div class="wrapper">
     <div class="parallax">
