--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -1,4 +1,4 @@
-html {background: url(img/mars.jpg) no-repeat center center fixed; 
+html {
 		  -webkit-background-size: cover;
 		  -moz-background-size: cover;
 		  -o-background-size: cover;
