--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -11,10 +11,10 @@
     <title>EXTRARA</title>
 
     <!-- Bootstrap Core CSS -->
-    <!--<link href="http://extrara.com/css/bootstrap.min.css" rel="stylesheet">-->
+ <link href="http://extrara.com/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <!--<link href="http://extrara.com/css/grayscale.css" rel="stylesheet">-->
+ <link href="http://extrara.com/css/grayscale.css" rel="stylesheet">
 
     
     <link href="http://extrara-assets.s3-website-us-east-1.amazonaws.com/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -74,9 +74,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/images/extrarwht.png" alt="" width="80%" height="20%" class="logo">
+                        <img src="http://extrara-assets.s3-website-us-east-1.amazonaws.com/images/extrarwht.png" alt="" width="80%" height="20%" class="staticlogo">
                         <h1 class="brand-heading"></h1>
-                        <p class="intro-text">A global community for space ventures.</p>
+                        <p class="intro-text">A globalcommunity for space ventures.</p>
                         <a href="/#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
