--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -85,7 +85,7 @@
     <div class="container">
         <div>
           <div class="user-name">Hi, I'm <%=@user.fullname%><br><small></small></div>
-
+          <div class= "user-name"><%=link_to "Message me", new_conversation_path(:recid=>@user), method: :post%>
       </div>
       <div class="skills-container">
                         <span><strong>Skills: </strong></span>
