--- a/app/assets/stylesheets/convo.css
+++ b/app/assets/stylesheets/convo.css
@@ -7,3 +7,11 @@
 	margin-right: auto;
 	margin-left: auto;
 }
+.form-message{
+	width:40%;
+	margin-right: auto;
+	margin-left: auto;
+}
+.convo-subject{
+	text-align: center;
+}
