--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -37,7 +37,7 @@
                <div class="row">
                   <div class="col-md-8 bottom-border">
                     <%= image_tag @project.avatar.url(:medium) %>
-                    <h1 class="title title-blog"><%=@project.try(:title)%>: <%=@project.try(:subtitle)%></h1> 
+                    <h1 class="title title-blog"><%=@project.try(:title)%>:<h2><%=@project.try(:subtitle)%></h2> </h1>
                     <p><%=@project.try(:des)%></p>
 
                     <blockquote> 
